@@ -1,5 +1,6 @@
 using System;
 using System.Collections.Generic;
+using System.Linq;
 using GraphX.Measure;
 using QuickGraph;
 
@@ -41,6 +42,12 @@ namespace GraphX.GraphSharp.Algorithms.Layout.Simple.FDP
 
         protected override void InternalCompute()
         {
+            if (VisitedGraph.VertexCount == 1)
+            {
+                VertexPositions.Add(VisitedGraph.Vertices.First(),new Point(0,0));
+                return;
+            }
+
             #region Initialization
             distances = new double[VisitedGraph.VertexCount, VisitedGraph.VertexCount];
             edgeLengths = new double[VisitedGraph.VertexCount, VisitedGraph.VertexCount];
