@@ -20,6 +20,8 @@
 + Renamed method LoadFromFile to DeserializeFromFile
 + Set (0,0) coordinate by default for all custom objects newly added to GraphArea
 + Fixed edges after storage state loading
++ Fixed LinLog, KK, ISOM, FR algorithms display when there is only one vertex
++ Fixed overlap removal algorithm loading with incorrect parameters
 
 PCL-IMPROVEMENTS
 - Added YAXLib v2.13 project sources splitted into 2 different projects: main and PCL compliant (for attributes to be availbale in PCL libraries)
